# Invoice-Payment-Service

./: .env  AI_USAGE.md  API.md  DESIGN.md  README.md  docker-compose.yml  rustfmt.toml
migrations/: 001_init.down.sql  001_init.up.sql  002_seed_businesses_customers.down.sql  002_seed_businesses_customers.up.sql  003_seed_demo_api_key.down.sql  003_seed_demo_api_key.up.sql  004_add_webhook_signing_secret.down.sql  004_add_webhook_signing_secret.up.sql
scripts/: curl-examples.sh
services/invoice-api/: Cargo.toml  Dockerfile
services/invoice-api/src/: lib.rs  main.rs  worker.rs
services/invoice-api/src/auth/: mod.rs
services/invoice-api/src/configuration/: mod.rs
services/invoice-api/src/customer/: mod.rs  model.rs  service.rs
services/invoice-api/src/invoices/: mod.rs  model.rs  service.rs
services/invoice-api/src/middleware/: mod.rs
services/invoice-api/src/routes/: mod.rs
services/invoice-api/src/webhooks/: mod.rs
services/invoice-api/tests/: required_tests.rs
services/mock-psp/: .env  Cargo.toml  Dockerfile
services/mock-psp/src/: main.rs
